# probs

./: Cargo.toml  README.md
src/: dist.rs  distribution.rs  domain.rs  lib.rs  randvar.rs  sampler.rs
