[package]
name = "probs"
edition = "2021"
version = "0.4.0"
authors = ["yihengdu"]

categories = ["algorithms", "science"]
keywords = ["statistic", "probability", "sample"]

readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Statistics toolkit"
repository = "https://github.com/mrlazy1708/probs"
documentation = "https://docs.rs/probs/latest/probs"

[dependencies]
num = "^0.4"
tqdm = "^0.3"
rand = "^0.8"

nalgebra = "^0.30"
ndarray = "^0.15"
nshare = "^0.9"
